--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
               Our Office
             </h5>
             <p class="mb-4 m-md-0">
-              26 Trudeau Road
-              Melton South
-              Victoria 3338
+              26 Trudeau Road,
+              Melton South,
+              Victoria 3338, Australia
             </p>
           </div>
         </div>
