--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ER4MFFMKME"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-ER4MFFMKME');
+  </script>
+  
   <meta charset="utf-8" />
   <title>Pristine Solar Victoria</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
